commiting on behalf of elecharny: Fixed potential NPE. Modified some static fields to private in StringTools. Added some accessor methods. Basically, cleaned some code to avoid NPE and potential errors
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491358 13f79535-47bb-0310-9956-ffa450edef68